--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "pitches-votacao",
   "version": "1.0.0",
+  "description": "Sistema de votacao de pitches (Grão Direto)",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.19.0",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
